--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "aws-amplify": "^3.0.10",
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^2.1.8",
+    "tslib": "^1.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
